Added all results after exp 1 iter 1 Diabetes

--- a/notebooks/mult_repair_levels_diabetes/Diabetes-Copy4.ipynb
+++ b/notebooks/mult_repair_levels_diabetes/Diabetes-Copy4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b6671a59",
+   "id": "4851cffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a7344bfa",
+   "id": "db4a1ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2bb0fcff",
+   "id": "1060f196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "630a7938",
+   "id": "4b0b8073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dbc5df7d",
+   "id": "5bc9b719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,19 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "13b68253",
+   "execution_count": 1,
+   "id": "32914bbc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -77,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a024ef98",
+   "execution_count": 2,
+   "id": "4f2988f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fb498822",
+   "execution_count": 3,
+   "id": "0ba2b39a",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3fa47b3",
+   "id": "177127fa",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -120,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "01707bd7",
+   "execution_count": 4,
+   "id": "71343079",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc1366e",
+   "id": "9cd493a1",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7d74a4c4",
+   "execution_count": 5,
+   "id": "4b519535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +163,7 @@
     "DB_COLLECTION_NAME = 'exp_mult_repair_levels'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "# FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.4]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'diabetes_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -180,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c57da1",
+   "id": "cd3c02c5",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -188,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "86b5b371",
+   "execution_count": 6,
+   "id": "d0d22961",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +189,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "29975271",
+   "execution_count": 7,
+   "id": "28d86b11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "59c5ff8f",
+   "execution_count": 8,
+   "id": "9bf152de",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdac65fe",
+   "id": "c326cba5",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -257,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "abc560c4",
+   "execution_count": 9,
+   "id": "97da7b7d",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +461,7 @@
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,8 +474,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "2174dcf1",
+   "execution_count": 10,
+   "id": "854cc315",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +486,7 @@
        "Name: readmitted, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,8 +497,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "be329328",
+   "execution_count": 11,
+   "id": "e39c69c6",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +507,7 @@
        "(45715, 44)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,8 +518,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "980d9005",
+   "execution_count": 12,
+   "id": "40c60506",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +531,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edba442f",
+   "id": "8f9718b1",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -559,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1193cc9",
+   "id": "5ffd4a1c",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -567,20 +558,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "1ef24a39",
+   "execution_count": 13,
+   "id": "8286bd32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tuned_params_filenames = ['tuning_results_Folktables_NY_2018_Employment_alpha_0.8_20230706__115508.csv']\n",
-    "# tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
-    "#                          for tuned_params_filename in tuned_params_filenames]"
+    "tuned_params_filenames = ['tuning_results_Diabetes_alpha_0.4_20230805__103616.csv']\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                         for tuned_params_filename in tuned_params_filenames]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "4c00f136",
+   "execution_count": 14,
+   "id": "4ae9a934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,15 +586,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6a92aa90",
+   "execution_count": null,
+   "id": "2aa7924c",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-05 05:51:39 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-08-05 08:46:12 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -613,7 +604,7 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.4]',\n",
       " 'model_init_seed': 100,\n",
       " 'session_uuid': 'f88d9187-81c1-496e-a809-65185798edd6'}\n",
       "\n",
@@ -624,7 +615,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-05 05:51:40 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-08-05 08:46:13 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -645,7 +636,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b0a2bfadbf8487f94c9e233c8a91094",
+       "model_id": "7d5f55dd7c1647148b4c068ceb2decb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -660,30 +651,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "2023/08/05, 05:51:58: Tuning RandomForestClassifier...\n"
+      "intervention_param:  0.4\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-05 06:21:58 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
-      "INFO:root:Models are tuned and saved to a file\n"
+      "2023-08-05 08:46:32 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/08/05, 06:21:58: Tuning for RandomForestClassifier is finished [F1 score = 0.49344230897392544, Accuracy = 0.760207057451152]\n",
-      "\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_diabetes/tuning_results_Diabetes_alpha_0.4_20230805__103616.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 60, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 500, 'n_jobs': None, 'oob_score': False, 'random_state': 100, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2896b10f576345ca920b62791a5ef3ba",
+       "model_id": "a830cc5f1a924c72a359a4c034b30652",
        "version_major": 2,
        "version_minor": 0
       },
@@ -697,7 +687,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4877a83cff2449f99a41af9c493b94b1",
+       "model_id": "a3979a33b92b4530853ad767d7bdfce1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -711,7 +701,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2dc8157f1924f9e988f81872432f902",
+       "model_id": "3440facf4bff4373b02687077bf24b4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -732,16 +722,16 @@
     "                                   models_params_for_tuning=models_params_for_tuning,\n",
     "                                   metrics_computation_config=metrics_computation_config,\n",
     "                                   custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                   with_tuning=True,\n",
-    "                                   # with_tuning=False,\n",
-    "                                   # tuned_params_df_paths=tuned_params_df_paths,\n",
+    "#                                    with_tuning=True,\n",
+    "                                   with_tuning=False,\n",
+    "                                   tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                   save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
     "                                   verbose=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b4c44f53",
+   "id": "a3e80b4b",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -750,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7d1ed231",
+   "id": "651c4413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c385fd15",
+   "id": "b7bdd144",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "513af64a",
+   "id": "404c75bf",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1132,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3459beb8",
+   "id": "eb87647e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbac3a28",
+   "id": "134b9652",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "642976aa",
+   "id": "f65644d5",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1187,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "facd2de3",
+   "id": "c639f3f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1202,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e236a7a3",
+   "id": "7abb84ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660d78e8",
+   "id": "2e0fa169",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1242,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eec2b746",
+   "id": "32260a2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12784249",
+   "id": "be1712ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d3f8ff",
+   "id": "d9a02bc2",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1297,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "593b4603",
+   "id": "5faf74ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aac47678",
+   "id": "b3039b4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73e4e7ed",
+   "id": "43edc725",
    "metadata": {},
    "outputs": [],
    "source": []
