Added all results for alpha 0.4

--- a/notebooks/mult_repair_levels_diabetes/Diabetes_Batch3.ipynb
+++ b/notebooks/mult_repair_levels_diabetes/Diabetes_Batch3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1b4820fd",
+   "id": "24292a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "faf2e6eb",
+   "id": "77316d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cb582dba",
+   "id": "85412d93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8f4aecd7",
+   "id": "92323975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1b61da58",
+   "id": "66f285dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "77d81b9f",
+   "id": "3d0ba3a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "afb2427c",
+   "id": "2554912d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cd066023",
+   "id": "ae85bf61",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6614277",
+   "id": "0ef52563",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "493bb66b",
+   "id": "9868c317",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb546abe",
+   "id": "4bd8d78b",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "49069968",
+   "id": "89f9965e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
     "DB_COLLECTION_NAME = 'exp_mult_repair_levels'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "# FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.5, 0.6]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.4]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'diabetes_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "895c6247",
+   "id": "2e2c4ebd",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "12c1937b",
+   "id": "7b8e8f00",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3e3745d4",
+   "id": "22a413f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e07487a7",
+   "id": "a0d4162a",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d2db406",
+   "id": "16efb329",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bf8c22fc",
+   "id": "af38480d",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "46829cfb",
+   "id": "a39b1cc9",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "498da57b",
+   "id": "ad888d85",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3987e27c",
+   "id": "c6e3b721",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8fb43b7",
+   "id": "b9c8efe1",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7db1373e",
+   "id": "237e7148",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cedfb571",
+   "id": "dcc7f18a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7e72afca",
+   "id": "b9f562ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d785676d",
+   "id": "df3fd270",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d3ed910",
+   "id": "5650f992",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d6ba4123",
+   "id": "7e2886cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,8 +749,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Diabetes_alpha_0.5_20230805__103453.csv',\n",
-    "    'tuning_results_Diabetes_alpha_0.6_20230805__103653.csv'\n",
+    "    'tuning_results_Diabetes_alpha_0.4_20230805__103616.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -763,14 +762,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9124461f",
+   "id": "a3bb5541",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-05 11:59:31 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-08-05 14:09:24 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -780,7 +779,7 @@
      "text": [
       "{'dataset_split_seed': 200,\n",
       " 'experiment_iteration': 'Exp_iter_2',\n",
-      " 'fair_intervention_params_lst': '[0.5, 0.6]',\n",
+      " 'fair_intervention_params_lst': '[0.4]',\n",
       " 'model_init_seed': 200,\n",
       " 'session_uuid': 'f88d9187-81c1-496e-a809-65185798edd6'}\n",
       "\n",
@@ -791,7 +790,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-05 11:59:31 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-08-05 14:09:24 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -812,12 +811,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68daa7496b9b451ca0e7207d60f75078",
+       "model_id": "870bf85bef67428996f0ad67186cdef8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Multiple alphas:   0%|          | 0/2 [00:00<?, ?it/s]"
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -827,14 +826,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.5\n"
+      "intervention_param:  0.4\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-05 11:59:49 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2023-08-05 14:09:42 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -842,14 +841,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_diabetes/tuning_results_Diabetes_alpha_0.5_20230805__103453.csv\n",
-      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 50, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 200, 'verbose': 0, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_diabetes/tuning_results_Diabetes_alpha_0.4_20230805__103616.csv\n",
+      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 60, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 500, 'n_jobs': None, 'oob_score': False, 'random_state': 200, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2409278d90114ca8a25f4304727689e9",
+       "model_id": "4fe022da10ba4756a2c254e01e29c551",
        "version_major": 2,
        "version_minor": 0
       },
@@ -863,7 +862,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ef8889312fb4e8aa4c746c2d1af660c",
+       "model_id": "13655e7da882433e9e5f08723b5a8ff0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -877,58 +876,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c717061a96f74bc4a2f9cf4da7f84f35",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_param:  0.6\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/mult_repair_levels_diabetes/tuning_results_Diabetes_alpha_0.6_20230805__103653.csv\n",
-      "RandomForestClassifier:  {'bootstrap': False, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 60, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': 201, 'verbose': 0, 'warm_start': False}\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a65eddff07944e4997985982f777dfe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44b0dfa315c34e4989ac8863d6555503",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49a26025c2de425cbe3388b860c2d00a",
+       "model_id": "0791fd1ee558499a84a5f8b7773a4a4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -958,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e6cab12",
+   "id": "c5ba8ab3",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -967,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e746ea2",
+   "id": "2c903b63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,8 +923,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Diabetes_alpha_0.5_20230805__103453.csv',\n",
-    "    'tuning_results_Diabetes_alpha_0.6_20230805__103653.csv'\n",
+    "    'tuning_results_Diabetes_alpha_0.4_20230805__103616.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -989,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea529272",
+   "id": "7600c5a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2504ca62",
+   "id": "accea05c",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1019,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "588be0fb",
+   "id": "8e33fa45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,8 +974,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Diabetes_alpha_0.5_20230805__103453.csv',\n",
-    "    'tuning_results_Diabetes_alpha_0.6_20230805__103653.csv'\n",
+    "    'tuning_results_Diabetes_alpha_0.4_20230805__103616.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1041,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a6742b94",
+   "id": "415cffb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd1520d",
+   "id": "cd99c746",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1071,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8929a705",
+   "id": "91bae52e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,8 +1025,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Diabetes_alpha_0.5_20230805__103453.csv',\n",
-    "    'tuning_results_Diabetes_alpha_0.6_20230805__103653.csv'\n",
+    "    'tuning_results_Diabetes_alpha_0.4_20230805__103616.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1093,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de3180ef",
+   "id": "6a7c2cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0213de16",
+   "id": "aa04fa60",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1123,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32bf23bd",
+   "id": "4287f741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,8 +1076,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Diabetes_alpha_0.5_20230805__103453.csv',\n",
-    "    'tuning_results_Diabetes_alpha_0.6_20230805__103653.csv'\n",
+    "    'tuning_results_Diabetes_alpha_0.4_20230805__103616.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1145,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "209acc98",
+   "id": "aaf48f91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08152ccc",
+   "id": "ed327d25",
    "metadata": {},
    "outputs": [],
    "source": []
